kustomize/overlays/scots-lab/apps/drawio/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: drawio
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
