kustomize/overlays/scots-lab/apps/drawio/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: drawio
  namespace: drawio
spec:
  parentRefs:
    - name: kgateway-http
      namespace: kgateway-system
  hostnames:
    - "draw.srbii.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: drawio
          port: 4180
